--- a/app/views/accountancy/_document_options.html.haml
+++ b/app/views/accountancy/_document_options.html.haml
@@ -1,18 +1,14 @@
--document ||= @document
--if document == :balance_sheet
+-nature = @document_template.nature.to_sym
+-if [:balance_sheet, :income_statement].include?(nature)
   =formalize do |f|
-    -f.title :print_options 
-    -f.field "klms", "123"
--elsif document == :income_statement
+    -f.title Financialyear.human_name 
+    -f.field Financialyear.human_name, select_tag("financialyear", options_for_select(@current_company.financialyears.collect{|x| [x.code, x.id.to_s]}, params[:financialyear]))
+-elsif nature == :journal
   =formalize do |f|
-    -f.title :print_options 
-    -f.field "klms", "123"   
--elsif document == :journal
+    -f.title Journal.human_name
+    -f.field Journal.human_name, select_tag("journal", options_for_select(@current_company.journals.collect{|x| [x.name, x.id.to_s]}, params[:journal]))
+-if [:journal, :journals, :general_ledger].include?(nature)
   =formalize do |f|
-    -f.title :print_options 
-    -f.field Journal.human_name, select_tag("journal_id", options_for_select(@current_company.journals.collect{|x| [x.name, x.id]}))
--if [:journal, :journals, :general_ledger].include?(document)
-  =formalize do |f|
-    -f.title :period_options 
+    -f.title :period
     -f.field tg("from"), calendar_field_tag(:started_on, params[:started_on]||(Date.today-1.month))
-    -f.field tg("to"),   calendar_field_tag(:stopped_on, params[:started_on]||(Date.today-1.month))
+    -f.field tg("to"),   calendar_field_tag(:stopped_on, params[:stopped_on]||Date.today)
