--- a/app/views/accountancy/document_print.html.haml
+++ b/app/views/accountancy/document_print.html.haml
@@ -1,5 +1,10 @@
--form_tag do
-  =render :partial=>@partial 
+-form_tag({:controller=>:company, :action=>:print}) do
+  =formalize do |f|
+    -f.title DocumentTemplate.human_name
+    -f.field DocumentTemplate.human_name, select_tag("id", options_for_select(@document_templates.collect{|d| [d.name, d.code]}, params[:code]), :id=>"template_code")
+  #document_options=render(:partial=>'document_options')
   .actions
-    =link_to tg("previous"), :action=>:document_prepare
-    =submit_tag tg("print")
+    =submit_tag tg(:print), :name=>nil
+=observe_field "template_code", :update=>:document_options, :url=>{:action=>:document_print}, :with=>"code"
+
+
