--- a/app/views/relations/_entity_nature_form.html.haml
+++ b/app/views/relations/_entity_nature_form.html.haml
@@ -1,4 +1,5 @@
 = formalize do |f|
+  - f.error :entity_nature
   - f.field :entity_nature, :name
   - f.field :entity_nature, :abbreviation
   - f.field :entity_nature, :active
