Begins to add AJAX support for new items in dyselect and dyli
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1464 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_area_form.html.haml
+++ b/app/views/relations/_area_form.html.haml
@@ -3,4 +3,4 @@
   - f.field :area, :district_id, :choices => :districts, :new => {:action => :district_create}
   - f.field :area, :name
   - f.field :area, :code
-  - f.field :area, :country, :choices=>countries, :options=>{:include_blank=>true}
+  - f.field :area, :country, :choices=>countries # , :options=>{:include_blank=>true}
