Finish support of dyli new
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1466 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entity_form.html.haml
+++ b/app/views/relations/_entity_form.html.haml
@@ -3,7 +3,6 @@
   -f.error :datum
   -f.title :title
   -f.field :entity, :nature_id, :choices=>{:reflection=>:entity_natures, :label=>:name, :order=>:name}, :new=>{:action=>:entity_nature_create}
-  -#f.field :entity, :nature_id, :choices=>@current_company.entity_natures.find(:all, :order=>:name).collect {|x| [x.name, x.id]}, :new=>{:action=>:entity_nature_create}
   -f.field :entity, :language_id, :choices=>@current_company.languages.find(:all, :order=>:native_name).collect {|x| [x.native_name, x.id]}
   -f.field :entity, :name
   -f.field :entity, :first_name
@@ -18,24 +17,19 @@
   -f.field :entity, :excise
   -f.field :entity, :code
   -f.field :entity, :born_on
-  -#f.field :entity, :dead_on
   -f.field :entity, :website
   -f.field :entity, :photo
   -f.field :entity, :comment, :field=>:textarea
   -f.field :entity, :ean13
   -for datum in @complement_data
     -f.field datum.complement.name, {:datatype=>datum.complement.nature.to_sym, :id=>"complement_datum_#{datum.complement_id}_value", :name=>"complement_datum[#{datum.complement_id}][value]", :value=>datum.value, :size=>datum.complement.length_max, :options=>{:include_blank=>(datum.complement.required ? nil : '')}, :choices=>datum.complement.choices.find(:all, :conditions=>{:company_id=>@current_company.id}, :order=>:position).collect{|x| [x.name , x.id]}  }
- 
 
 =formalize(:id=>:client_form) do |f|
   -f.title :client
-  -f.field :entity, :client_account_id, :choices=>@client_accounts.collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:account_create}, :options=>{:include_blank=>tc(:account_client_to_create)} 
+  -f.field :entity, :client_account_id, :choices=>{:reflection=>:client_accounts, :include_blank=>tc(:account_client_to_create)}, :new=>{:controller=>:accountancy, :action=>:account_create}
   -f.field :entity, :category_id, :choices=>@current_company.entity_categories.find_all_by_deleted(false).collect{|x| [x.name, x.id]}
-  -#f.field :entity, :origin
-  - f.field  t("activerecord.attributes.entity.origin"), text_field_with_auto_complete(:entity, :origin)
+  -f.field Entity.human_attribute_name("origin"), text_field_with_auto_complete(:entity, :origin)
   -f.field :entity, :first_met_on
-  - #f.field :name ,{:datatype=>:choice, :id=>"meeting_#{meeting.position}_meeting_id", :name=>"entity_meeting[#{entity_meeting.position}][meeting_id]", :value=>entity_meeting.meeting_id, :choices=>@current_company.meetings.find(:all, :conditions=>{:active=>true}).collect{|x| [x.name, x.id]}, :options=>{:include_blank=>"--Aucun--"} }
-  -#f.field :entity, :proposer_id, :choices=>@current_company.entities.find(:all, :conditions=>["id != ?", (@entity.new_record? ? 0 : @entity)], :order=>:name).collect{|x| [x.full_name, x.id]}, :options=>{:include_blank=>tc('no_proposer')}
   -f.field :entity, :proposer_id, :choices=>:entities
   -f.field :entity, :responsible_id, :choices=>@current_company.users.find(:all, :conditions=>{:commercial=>'true'}, :order=>:last_name).collect{|p| [p.last_name, p.id]}, :new=>{:controller=>:resources, :action=>:employee_create}, :options=>{:include_blank=>tc(:no_commercial)}
   -f.field :entity, :vat_submissive
@@ -48,7 +42,6 @@
 =formalize(:id=>:supplier_form) do |f|
   -f.title :supplier
   -f.field :entity, :supplier_account_id, :choices=>@supplier_accounts.collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:account_create}, :options=>{:include_blank=>tc(:account_supplier_to_create)} 
-
 
 :javascript
   function displayFields(){
