--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     =title_tag
     =theme_link_tag(@current_theme)
     =calendar_link_tag
-    =javascript_include_tag :defaults
+    =javascript_include_tag :all, :cache => true
   %body{:onload=>"resize();", :onresize=>"resize();"}
     #body{:orient=>:vertical, :flex=>1}
       =top_tag
