--- a/app/views/relations/_mandate_form.html.haml
+++ b/app/views/relations/_mandate_form.html.haml
@@ -1,9 +1,8 @@
 =formalize do |f|
   -f.error :mandate
-  -f.field :mandate, :entity_id, :choices=>:entities
-  - # f.field :mandate, :entity_id, :choices=>@entities.collect{|e| [e.full_name,e.id]}
-  -f.field  t("activerecord.attributes.mandate.family"), text_field_with_auto_complete(:mandate, :family)
-  -f.field  t("activerecord.attributes.mandate.organization"), text_field_with_auto_complete(:mandate, :organization)
-  -f.field  t("activerecord.attributes.mandate.title"), text_field_with_auto_complete(:mandate, :title)
-  -f.field  :mandate, :started_on
-  -f.field  :mandate, :stopped_on
+  -f.field :mandate, :entity_id, :choices=>:entities, :new=>{:action=>:entity_create}
+  -f.field Mandate.human_attribute_name("family"), text_field_with_auto_complete(:mandate, :family)
+  -f.field Mandate.human_attribute_name("organization"), text_field_with_auto_complete(:mandate, :organization)
+  -f.field Mandate.human_attribute_name("title"), text_field_with_auto_complete(:mandate, :title)
+  -f.field :mandate, :started_on
+  -f.field :mandate, :stopped_on
